# data-engineering-journey

./: .gitignore  LICENSE  README.md
daily-logs/: 06-08-2025.md  06-09-2025.md  06-10-2025.md  06-11-2025.md  06-17-2025.md  6-29-2025.md
interview_prep/: data_engineer_interview_prep.md
interview_prep/next-interview/: 1-basic-info.md  10-sql-patterns.md  8-dataOps.md  9-insurance.md  aws.md  core_DE.md  dataOps.md  data_vault2.0.md  snowflake.md  spark.md  sql.md
interview_prep/next-interview/daily-log/: 03-09-2026.md  03-10-2026.md  03-11-2026.md  03-12-2026.md  03-13-2026.md  03-16-2026.md  03-17-2026.md  03-18-2026.md
notes/PySpark/: pyspark-basics.md
notes/airflow/: airflow-basics.md
notes/docker/: docker-basics.md
notes/kafka/: kafka_basics.md
notes/snowflake/: basics.md
notes/sql/: basics.md  intermediate.md  sql-functions-cheatsheet.md
projects/etl-pipeline-covid-api/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
projects/etl-pipeline-covid-api/dags/: covid_etl_dag.py
projects/etl-pipeline-covid-api/scripts/: extract.py  load.py  run_etl.py  transform.py
projects/etl-pipeline-covid-api/tests/: test_load.py  test_transform.py
projects/etl-pipeline-covid-api/visualizations/: Dockerfile  app.py  pyproject.toml
projects/etl-pipeline-covid-api/visualizations/include/: config.py
projects/etl-pipeline-covid-api/visualizations/include/sql/: query.py
projects/streaming-kafka-spark/: Dockerfile.producer  Dockerfile.spark-app  docker-compose.yml  init-db.sql  requirements.txt  test_kafka_connection.py
(+9 files in other folders)
