[tool.poetry]
name = "etl-pipeline-covid-api"
version = "0.1.0"
description = ""
authors = ["codesVarun <singhvarun9554@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
apache-airflow = "2.9.1"
apache-airflow-providers-postgres = "^5.9.0"
pandas = "*"
sqlalchemy = "^1.4.49"
psycopg2-binary = "^2.9"
pyarrow = ">=15.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"